<resources>
    <string name="app_name">Epicture</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="connection">Connexion</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
