<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/icon_login"
        android:title="@string/connection"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_upload"
            android:icon="@drawable/icon_upload"
            android:title="@string/upload"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_setting"
            android:icon="@drawable/icon_upload"
            android:title="@string/setting"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_about"
            android:title="@string/about"
            app:showAsAction="never"/>
</menu>